src/components/Pokedex/PokemonCard/PokemonCard.css
.pokemonCard {
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
    margin: 5px;
    width: 300px;
    height: 150px;
    transition: .1s ease-in;
    cursor: pointer;
}

.pokemonCard button {
    background-color: transparent;
    border: none;
    cursor: pointer;
    position: absolute;
    bottom: 1.5rem;
    right: 0.3rem;
}

.pokemonCard:hover {
    transform: scale(1.05);
}

.pokemonCard-container {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: space-between;
    text-align: right;
    color: var(--main-text-color);
    border-radius: var(--main-radius);
    height: 70%;
    width: 100%;
    overflow: hidden;
}

.pokemon-title {
    text-transform: capitalize;
    color: var(--main-text-color);
    font-size: 1.5rem;
    font-weight: bold;
    z-index: 2;
    left: 5px;
    position: absolute;
    text-shadow: -1px -1px rgba(255, 255, 255, 0.432);
}

.idContainer {
    z-index: 0;
    width: 100%;
    height: 100%;
    text-align: right;
    padding-right: 152px;
}

.pokemon-id {
    color: rgba(255, 255, 255, 0.150);
    font-size: 6rem;
    font-weight: 900;
    font-style: italic;
    font-family: 'Oswald', sans-serif;
    z-index: 0;
    text-shadow: 1px 1px  rgba(255, 255, 255, 0.15);
}

.pokemonCard-img {
    width: 100px;
    height: 100px;
    position: absolute;
    top: 0;
    right: -10px;
    z-index: 3;
}

.not-Found-Img-PokemonCard {
    max-width: 100px;
    max-height: 100px;
    width: auto;
    height: auto;
    position: absolute;
    top: 0;
    right: 0;
}

.pokemonCard-types {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    z-index: 2;
    position: absolute;
    bottom: 28px;
    left: 5px;
}

.type {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 60px;
    height: 20px;
    font-size: 0.7rem;
    font-weight: bold;
    color: white;
    text-transform: capitalize;
    border-radius: 10px;
    z-index: 2;
}

.st {
    margin-right: 7px;
}

@media (max-width: 620px) {
    .pokemonCard {
        width: 90%;
    }

    .pokemon-id {
        top: 45%;
        left: 30%;
    }
}

